<resources>
    <string name="app_name">YouDrank</string>
    <string name="title_home">Water intake</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_settings">Settings</string>
    <string name="water_intake_placeholder">Your daily goal in ml</string>
    <string name="update_settings">Update settings</string>
    <string name="settings">Your settings</string>
    <string name="add250ml">Add 250ML</string>
    <string name="add500ml">Add 500ML</string>
    <string name="add1L">Add 1L</string>
    <string name="custom_amount">Enter custom amount</string>
    <string name="add_custom_amount">Add</string>
    <string name="water_intake_text">Total water intake today: </string>
</resources>