<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsFragment">


    <TextView
        android:id="@+id/text_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:text="@string/settings"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/water_intake_per_day"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:autofillHints="@string/water_intake_placeholder"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/save_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_settings" />
</LinearLayout>