<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="3"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/local_drink_black_24dp"
                android:contentDescription="@string/add250ml" />

            <Button
                android:id="@+id/add250ml_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add250ml" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/local_drink_black_24dp"
                android:contentDescription="@string/add500ml"/>

            <Button
                android:id="@+id/add500ml_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add500ml" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/local_drink_black_24dp"
                android:contentDescription="@string/add500ml"/>

            <Button
                android:id="@+id/add1l_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add1L" />
        </LinearLayout>
    </LinearLayout>

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="Name" />
</LinearLayout>